Comecei a escrever o conteúdo

--- a/indes.html
+++ b/indes.html
@@ -9,15 +9,15 @@
 <body>
     <main>>
         <header>
-            <h1> Título do site</h1>
+            <h1> Curso grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis consectetur incidunt minima optio quaerat sunt. Ex, ipsam facilis suscipit harum adipisci dolor. Perferendis reprehenderit rem sint placeat ad, reiciendis cum.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident ipsum ducimus quaerat ex, nesciunt eligendi rem quod incidunt doloribus quidem eos nihil perspiciatis voluptates veniam ullam quos delectus culpa deleniti.</p>
         </article>
     </main>
 </body>
