--- a/indes.html
+++ b/indes.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Título do site</title>
-    <link rel="stylesheet" href="estilos/stryle.css"
+    <link rel="stylesheet" href="estilos/stryle.css">
 </head>
 <body>
+    
     <main>>
         <header>
             <h1> Título do site</h1>
