--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Título do site</title>
     <link rel="stylesheet" href="estilos/stryle.css">
+
 </head>
 <body>
     
     <main>>
         <header>
-            <h1> Título do site</h1>
+            <h1> Curso em Vídeo</h1>
         </header>
         <article>
             <h2>Artigo 001</h2>
