--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <h1>
     <title>Título do site</title>
-    <link rel="stylesheet" href="estilos/stryle.css">
+    </h1>
+    <link rel="stylesheet" href="estilos/style.css">
 
 </head>
 <body>
