--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <h1>
-    <title>Título do site</title>
+    <h1><title>Título do site</title> </h1>
     <link rel="stylesheet" href="estilos/style.css">
 
 </head>
